--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.16.2"
   },
   "devDependencies": {
