--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest --verbose --detectOpenHandles",
+    "test:integration": "jest tests/integration --forceExit",
+    "test:unit": "jest tests/unit",
+    "test:watch": "jest --watchAll",
+    "test:cov": "jest --coverage --collectCoverageFrom=src/**/*.js",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "repository": {
     "type": "git",
@@ -28,6 +34,9 @@
     "mongoose": "^8.16.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@shelf/jest-mongodb": "^5.2.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.3"
   }
 }
